--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-cors": "^2.0.0",
     "egg-scripts": "^2.5.0",
-    "egg-view-nunjucks": "^2.2.0"
+    "egg-view-nunjucks": "^2.2.0",
+    "http-proxy-middleware": "^0.18.0",
+    "koa-connect": "^2.0.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
