--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.0.4",
+    "moment": "^2.22.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0"
