--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-jasonff-reminder",
+    "start": "egg-scripts start --port=80 --daemon --title=egg-server-jasonff-reminder",
     "stop": "egg-scripts stop --title=egg-server-jasonff-reminder",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
