--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cube-ui": "~1.8.0",
+    "jsonp": "^0.2.1",
+    "less": "^3.0.2",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
