--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -26,6 +26,7 @@
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
