--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
+    "iview": "^2.14.1",
     "jsonp": "^0.2.1",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
