--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "echarts": "^4.1.0",
     "iview": "^2.14.1",
     "jsonp": "^0.2.1",
