--- a/mongod.conf
+++ b/mongod.conf
@@ -2,9 +2,9 @@
 
 #startMongoDb.conf
 #数据库数据存放目录
-dbpath=~/db/jasonff-reminder
+dbpath=./db/jasonff-reminder
 #数据库日志存放目录
-logpath=~/db/log/jasonff-reminder.log
+logpath=./db/log/jasonff-reminder.log
 #以追加的方式记录日志
 logappend=true
 #端口号 默认为27017
