--- a/mongod.conf
+++ b/mongod.conf
@@ -2,23 +2,23 @@
 
 #startMongoDb.conf
 #数据库数据存放目录
-dbpath=./db/jasonff-reminder
+dbpath=./db/
 #数据库日志存放目录
-logpath=./db/log/jasonff-reminder.log
+logpath=./dblog.log
 #以追加的方式记录日志
 logappend=true
 #端口号 默认为27017
-port=27017
+# port=27017
 #以后台方式运行进程
-fork=true
+# fork=true
  #开启用户认证
 #关闭http接口，默认关闭http端口访问
-nohttpinterface=true
+# nohttpinterface=true
 #mongodb所绑定的ip地址
 bind_ip=127.0.0.1
 #启用日志文件，默认启用
-journal=true
+# journal=true
 #这个选项可以过滤掉一些无用的日志信息，若需要调试使用请设置为false
-quiet=true
+# quiet=true
 #每个DB存放在独立的目录中
 directoryperdb=true
