--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "egg": "^2.2.1",
     "egg-cors": "^2.0.0",
     "egg-scripts": "^2.5.0",
     "egg-view-nunjucks": "^2.2.0",
     "http-proxy-middleware": "^0.18.0",
-    "koa-connect": "^2.0.1"
+    "koa-connect": "^2.0.1",
+    "moment": "^2.23.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
