--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "egg-scripts start --port=80 --daemon --title=egg-server-jasonff-reminder",
-    "https": "egg-scripts start --daemon --port=443 --https.key=www.abichi.club.key --https.cert=www.abichi.club_ssl.crt",
+    "https": "egg-scripts start --daemon --port=443 --https.key=13.230.68.110.key --https.cert=13.230.68.110_ssl.crt",
     "stop": "egg-scripts stop --title=egg-server-jasonff-reminder",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
